--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,4 @@
 include LICENSE
 recursive-include docs *.py *.rst Makefile
-recursive-include examples *.html *.py *.rst *.wav
+recursive-include examples *.html *.py *.rst
 recursive-include src *.py
-recursive-include tests *.bin *.py
